[CODE-014] Documentação Swagger de InvestmentController
